--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -18,7 +18,7 @@
   --vt-c-text-light-1: var(--vt-c-indigo);
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(10, 0, 0, 0.64);
+  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 }
 
 /* semantic color variables for this project */
@@ -58,8 +58,18 @@
   font-weight: normal;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   min-height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   color: var(--color-text);
   background: var(--color-background);
   transition:
