--- a/frontend/src/styles/theme-system.scss
+++ b/frontend/src/styles/theme-system.scss
@@ -462,8 +462,8 @@ blockquote {
 
 /* 工具類別 */
 .container {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
+  margin: 0;
   padding: 0 var(--space-6);
 }
 
